Switch to eclipse temurin 24, enable compact object headers